<resources>
    <string name="app_name">Small Talk</string>
    <string name="bottom_bar_message_list">Message</string>
    <string name="bottom_bar_contact_list">Contact</string>
    <string name="bottom_bar_group_list">Group</string>
    <string name="bottom_bar_about">About</string>
    <string name="nav_message_list_mark_as_read">Mark As Read</string>
    <string name="nav_contact_list_new_contacts">New Contact</string>
    <string name="nav_group_list_join_group">Join Group</string>
    <string name="nav_group_list_create_group">Create Group</string>
    <string name="nav_chat_room_view_profile">View Profile</string>
    <string name="nav_chat_room_view_files">View Files</string>
    <string name="nav_chat_room_share">Share</string>
    <string name="nav_chat_room_group_view_member_list">View Member List</string>
    <string name="nav_chat_room_group_settings">Group Settings</string>
    <string name="nav_profile_settings">Settings</string>
    <string name="nav_profile_view_request">Requests</string>
    <string name="nav_profile_share">Share</string>
    <string name="nav_profile_sign_out">Sign Out</string>
    <string name="chat_more_options">More Options</string>
    <string name="chat_more_options_send_image">Send Image</string>
    <string name="chat_more_options_take_photos">Camera</string>
    <string name="chat_more_options_video_call">Video Call</string>
    <string name="chat_more_options_send_voice">Send Voice</string>
    <string name="chat_more_options_file_transfer">File Transfer</string>
    <string name="chat_more_options_send_location">Send Location</string>
    <string name="chat_more_options_share">Share</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_password">Password</string>
    <string name="label_gender">Gender</string>
    <string name="label_about">About</string>
    <string name="label_location">Location</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_group_about">About</string>
    <string name="label_view_member_list">View Member List</string>
    <string name="menu_new_contacts">New Contact</string>
    <string name="menu_join_group">Join Group</string>
    <string name="hello_sign_in">Sign In</string>
    <string name="hello_sign_up">Sign Up</string>
    <string name="hello_forgot_password">Forgot Password?</string>
    <string name="request_revoke">Revoke</string>
    <string name="request_accept">Accept</string>
    <string name="request_decline">Decline</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_send_passcode">Send Passcode</string>
    <string name="button_send_request">Send Request</string>
    <string name="button_send_message">Send Message</string>
    <string name="button_select_file">Select File</string>
    <string name="button_upload_all">Upload All</string>
    <string name="button_select_image">Select Image</string>
    <string name="hint_email">Email</string>
    <string name="hint_passcode">6-Digit Passcode</string>
    <string name="hint_contact_email_address">Contact Email Address</string>
    <string name="hint_group_id">Group ID</string>
    <string name="hint_enter_message">Enter</string>
    <string name="hint_new_nickname">New Nickname</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_about">New About</string>
    <string name="hint_new_location">New Location</string>
    <string name="hint_new_group_name">New Group Name</string>
    <string name="hint_new_group_about">New Group About</string>
    <string name="new_contact_request_display_text">New Contact Request</string>
    <string name="new_member_request_display_text">New Member Request</string>
    <string name="new_member_request_template">%s to %s</string>
    <string name="zero_length_whitespace">​</string>
    <string name="id_placeholder">10001</string>
    <string name="email_placeholder">zjuwpn@gmail.com</string>
    <string name="nickname_placeholder">Peinan Weng</string>
    <string name="password_placeholder">********</string>
    <string name="about_placeholder">Hello, my name is Peinan Weng.</string>
    <string name="location_placeholder">Syracuse NY US</string>
    <string name="group_name_placeholder">CIS600 Group</string>
    <string name="group_about_placeholder">Everything about CIS600</string>
    <string name="message_placeholder">BlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBla</string>
    <string name="message_placeholder_short">BlaBlaBlaBlaBla</string>
    <string name="message_num_placeholder">99</string>
    <string name="time_placeholder">17:43</string>
    <string name="date_time_placeholder">09/13/2020 13:22:47</string>
    <string name="file_name_placeholder">water-drops-on-window-and-blue-sky-background.jpg</string>
    <string name="file_status_placeholder">Pending</string>
    <string name="file_size_placeholder">15.6 KB</string>
    <string name="file_downloads_placeholder">Downloads 588</string>
    <string name="request_status_placeholder">Accepted</string>
    <string name="music_progress_text_placeholder">0:00 / 4:59</string>
    <string name="alert_dialog_error">Error</string>
    <string name="alert_dialog_user_not_found">User not found!</string>
    <string name="alert_dialog_group_not_found">Group not found!</string>
    <string name="alert_dialog_request_not_found">Request not found!</string>
    <string name="alert_dialog_invalid_user_name">The length of a valid user name must be 2 – 16 characters!</string>
    <string name="alert_dialog_invalid_email">Invalid Email Address</string>
    <string name="alert_dialog_invalid_password">The length of a valid password must be 6 – 16 characters. You should only put numbers and letters in your password (and must both of them)!</string>
    <string name="alert_dialog_invalid_passcode">Passcode should be a string with 6 characters (numbers and letters only)!</string>
    <string name="alert_dialog_invalid_session_token">Session Token should be a string with 36 characters (numbers and letters only)!</string>
    <string name="alert_dialog_invalid_group_name">The length of a valid group name must be 2 – 16 characters!</string>
    <string name="alert_dialog_session_expired">Session Expired</string>
    <string name="alert_dialog_session_expired_detail">Session Expired. You will be logout.</string>
    <string name="alert_dialog_confirm">Confirm</string>
    <string name="alert_dialog_camera_permission_required">Camera Permission Required</string>
    <string name="alert_dialog_camera_permission_required_detail">This app need the camera to function</string>
    <string name="alert_dialog_camera_permission_grant">Grant</string>
    <string name="alert_dialog_camera_permission_deny">Deny</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_video_chat_exit_hint">Are you sure to exit video chat room?</string>
    <string name="toast_sign_up">Sign up successfully!</string>
    <string name="toast_sign_up_failed_user_exists">Sign up failed - User Exists!</string>
    <string name="toast_sign_up_failed_passcode_incorrect">Sign up failed - Passcode Incorrect!</string>
    <string name="toast_passcode_sent">Passcode sent to your email!</string>
    <string name="toast_server_error">Error - Server Error!</string>
    <string name="toast_user_exists">Error - User Exists!</string>
    <string name="toast_user_not_found">User not found!</string>
    <string name="toast_password_reset">Password Reset!</string>
    <string name="toast_password_reset_failed_passcode_incorrect">Recover password failed - Passcode Incorrect!</string>
    <string name="toast_sign_in">Sign In - Success!</string>
    <string name="toast_password_incorrect">Error - Password Incorrect!</string>
    <string name="toast_contact_request_sent">Contact request sent!</string>
    <string name="toast_contact_request_failed_already_friends">Contact request failed - You are already friends!</string>
    <string name="toast_contact_request_failed_user_not_found">Contact request failed - User not found!</string>
    <string name="toast_group_request_sent">Group request sent!</string>
    <string name="toast_group_request_failed_already_member">Group request failed - You are already a member of this group!</string>
    <string name="toast_group_request_failed_group_not_found">Group request failed - Group not found!</string>
    <string name="toast_request_not_found">Request ID not found!</string>
    <string name="toast_not_supported_yet">Sorry - Not supported yet.</string>
    <string name="toast_share_clicked">Share Clicked.</string>
    <string name="toast_camera_permission_denied">Camera Permission Denied.</string>
    <string name="toast_video_chat_first_stream">This is the first video stream!</string>
    <string name="toast_video_chat_last_stream">This is the last video stream!</string>
    <string name="toast_video_chat_internal_error">Video chat internal error!</string>
    <string name="notification_image">[Image Message]</string>
    <string name="notification_audio">[Audio Message]</string>
    <string name="notification_video">[Video Message]</string>
    <string name="notification_file">[File Message]</string>
    <string name="notification_others">[Unknown Message]</string>
    <string name="exception_image_too_large">This image must be no larger than 1 MB!</string>
    <string name="exception_file_too_large">File must be no larger than 30 MB!</string>
    <string name="exception_file_open_descriptor_failed">Open file descriptor failed.</string>
    <string name="request_pending">Pending</string>
    <string name="request_accepted">Accepted</string>
    <string name="request_declined">Declined</string>
    <string name="request_revoked">Revoked</string>
    <string name="gender_hide">Hide</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_others">Others</string>
    <string name="time_pattern_hm">HH:mm</string>
    <string name="time_pattern_md">MM/dd</string>
    <string name="time_pattern_mdy">MM/dd/yyyy</string>
    <string name="file_downloads_pattern">Downloads - %s</string>
    <string name="file_uploader_pattern">Uploaded by - %s</string>
    <string name="file_status_pending">Pending</string>
    <string name="file_status_uploading">Uploading</string>
    <string name="file_status_uploaded">Uploaded</string>
    <string name="file_status_failed">Failed</string>
    <string name="file_status_unknown">Unknown</string>
    <string name="content_description_logo">Logo</string>
    <string name="content_description_set">Set</string>
    <string name="content_description_image_message">Image Message</string>
    <string name="content_description_file_preview">File Preview</string>
    <string name="content_description_file_cancel">File Cancel</string>
    <string name="content_description_image_upload_preview">Image Upload Preview</string>
    <string name="content_description_call_button">Call Button</string>
    <string name="content_description_avatar_preview">Avatar Preview</string>
    <string name="content_description_send_message">Send Message</string>
    <string name="message_num_large">99+</string>
</resources>
