<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.CreateUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/input_new_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="28sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/input_new_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:textSize="28sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/input_new_user_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/hint_passcode"
            android:inputType="textEmailAddress"
            android:textSize="28sp"
            android:autofillHints="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btn_new_user_send_passcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/btn_new_user_next"
                android:text="@string/button_send_passcode"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_new_user_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/button_confirm"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
