<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/file_preview"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/label_avatar"
        android:src="@mipmap/ic_smalltalk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="middle"
        android:maxLines="3"
        android:text="@string/file_name_placeholder"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/file_preview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_uploader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/nickname_placeholder"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_name" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/file_size_placeholder"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_uploader" />

    <TextView
        android:id="@+id/file_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/date_time_placeholder"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_size" />

    <TextView
        android:id="@+id/file_expire_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/date_time_placeholder"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_upload_time" />

    <TextView
        android:id="@+id/file_downloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/file_downloads_placeholder"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_expire_time" />
</androidx.constraintlayout.widget.ConstraintLayout>
